assets/style/style.css
/* ... */
.mailto{
    text-decoration: none;
    color: white;
    padding: 20px;
    font-size: 16px;
}

/*-----------Footer-----------*/

.footer_container{
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: #840032;
    padding: 20px;
}
.footer_img{
    width: 84px;
    height: 84px;
    object-fit: cover;
    border-radius: 50%;
    box-shadow: 1px 9px 20px 0px rgba(0,0,0,0.83);
}

.footer_mention{
    font-size: 18px;
    font-weight: bold;
    color: white;
    text-shadow: 1px 4px 9px #0A0403;
}

@media screen and (max-width:1440px) {
    .nav_link_content{
        justify-content: center;
        gap: 70px;
    }
    .nav_link{
        font-size: calc(22px - 3px);
    }
    .banner_title{
        font-size: calc(45px - 10px);
    }
    .name{
        font-size: calc(55px - 20px);
    }
    .job_content{
        width: calc(100% - 10%);
    }
    .job{
        font-size: calc(30px - 10px);
    }
    .logo{
        height: 600px;
    }
    .me {
        height: calc(750px - 25%);
    }
    .me_img{
        height: calc(750px - 25%);
    }
    .about_portrait{
        left: 14%;
        top: 100%;
    }
}
@media screen and (max-width:1024px){
    .nav_link_content{
        justify-content: center;
        gap: 50px;
    }
    .nav_link{
        font-size: calc(22px - 10px);
    }
    .banner_title{
        font-size: calc(45px - 30px);
    }
    .me {
        height: calc(750px - 45%);
    }
    .me_img{
        height: calc(750px - 45%);
    }
    .logo{
        height: 475px;
    }
    .name{
        font-size: calc(55px - 30px);
    }
    .job_content{
        height: 60px;
    }
    .job{
        font-size: calc(30px - 15px);
    }
    .about_container{
        gap: 210px;
    }
    .about_portrait{
        left: 9%;
        top: 94%;
    }
    .gallery{
        grid-column-gap: 67px;
    }
}

@media screen and (max-width:970px){
    .nav_link_content{
        gap: 36px;
    }
    .about_container{
        gap: calc(170px - 25px);
    }
    .background_photo{
        width: 300px;
        height: 300px;
    }
    .portrait_img{
        width: 300px;
        height: 300px;
    }
    .about_portrait{
        left: calc(14% - 1%);
        top: 81%;
    }
    .about_description{
        font-size: 14px;
    }
}

@media screen and (max-width:853px){
    .gallery{
        grid-column-gap: 401px;
    }
}
@media screen and (max-width:715px){
    .about_container{
        gap: calc(130px - 25px);
    }
    .about_portrait{
        left: calc(11% - 1%);
        top: 100%;
    }
}
@media screen and (max-width:634px){
    .nav_link_content{
        gap: 10px;
    }
    .name{
        font-size: 20px;
    }
    .job_content{
        height: 40px;
    }
    .job{
        font-size: 12px;
    }
}

@media screen and (max-width:600px){
    .background_photo{
    width: 250px;
    height: 250px;
}
    .portrait_img{
    width: 250px;
    height: 250px;
}
    .about_portrait{
    left: calc(11% - 1%);
    top: 105%;
}
    .about_description{
    font-size: 12px;
}
}
@media screen and (max-width:525px){
    .me_img{
        height: 325px;
    }
    .logo{
        position: initial;
        height: 380px;
        width: 0px;
        padding: 0;
    }
    .banner{
        z-index: 5;
    }
    .about_container{
        flex-direction: column;
        gap: 0px;
    }
    .about_portrait{
        left: 30%;
        top: 63%;
    }
    .nav_link_content{
        gap: 15px;
        margin-left: 0;
    }
    .about_description{
        position: absolute;
        right: 10%;
        font-size: 14px;
        width: calc(100% - 20%);
    }
    .techno_title{
    font-size: 50px;
}
    .techno_hr{
        width: 285px;
    }
    .works_title{
    font-size: 50px;
}
    .works_hr{
        width: 240px;
    }
    .gallery{
        grid-template-columns: 250px;
        grid-template-rows: 250px
    }
    .footer_container{
        padding: 0;
    }
    .techno_card{
        margin-bottom: 20px;
    }
}
@media screen and (max-width:768px){
    .about_portrait{
        top: 103%;
        left:10%;
    }
}
@media screen and (max-width:476px){
    .about_portrait{
        left: 25%;
        top: 57%;
    }
}
@media screen and (max-width:426px){
    .about_portrait{
        left: 27%;
        top: 57%;
    }
}
@media screen and (max-width:376px){
    .about_portrait{
        left: 20%;
        top: 58%;
    }
    .techno_container{
        gap: 20px;
    }
    .send_mail_title{
        font-size: 15px;
    }
}
@media screen and (max-width:320px){
    .nav_link_content{
        gap: 5px;
        margin-left: 0;
    }
    .about_portrait{
        left: 15%;
        top: 57%;
    }
    .who_title{
        font-size: 18px;
    }
    .techno_container{
        flex-direction: column;
    }
    .techno_card{
        margin-bottom: 20px;
    }
}

